Added website meta information

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-portfolio",
-  "version": "0.1.0",
+  "name": "Mohit-Varma-Portfolio",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 4000",
