Changed app name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mohit-Varma-Portfolio",
+  "name": "mohit-varma-portfolio",
   "version": "1.0.0",
   "private": true,
   "scripts": {
